singin functions repair

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     </p>
     <p>
     <h4>
-        <button onclick="singinFetch">Send Singin</button>
+        <button onclick="singinFetch()">Send Singin</button>
     </h4>
     </p>
 </body>
