--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <script>
         async function singinFetch() {
             await fetch("http://localhost:3000/singin", { method: 'POST' }).then((data) => {
-                document.getElementById("message") = "data";
+                document.getElementById("message").innerHTML = JSON.stringify(data);
             });
         }
     </script>
